--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ sdl3 = { version = "0.14.33", features = [ "ash", "raw-window-handle" ] }
 thiserror = "2.0.12"
 tobj = "4.0.3"
 vulkano = "0.35.1"
+#ash = "0.38.0"
 smallvec = "1.15.1"
 
 #[profile.dev]
