--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,11 @@ tobj = "4.0.3"
 vulkano = "0.35.1"
 #ash = "0.38.0"
 smallvec = "1.15.1"
+shaderc = "0.9.1"
+foldhash = "=0.1.5"
+crossbeam = "0.8.4"
+shrev = "1.1.3"
+#tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "sync", "macros" ] }
 
 #[profile.dev]
 #opt-level = 1 
