--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ shaderc = "0.9.1"
 foldhash = "=0.1.5"
 crossbeam = "0.8.4"
 shrev = "1.1.3"
+#hecs = "0.10.5"
+bevy_ecs = "0.16.1"
+#shipyard = "0.8.1"
 #tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "sync", "macros" ] }
 
 #[profile.dev]
