--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,23 @@ crossbeam = "0.8.4"
 shrev = "1.1.3"
 #hecs = "0.10.5"
 bevy_ecs = "0.16.1"
+rayon = "1.10.0"
 #shipyard = "0.8.1"
 #tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "sync", "macros" ] }
+
+[build]
+rustflags = [ "-Ctarget-feature=+avx2" ]
 
 #[profile.dev]
 #opt-level = 1
 
 [profile.release]
-debug = true
+debug = false
+#panic = "abort"
+panic = "unwind"
+opt-level = 3
+overflow-checks = false
+#lto = "fat"
+#codegen-units = 1
+lto = "thin"
+codegen-units = 16
