--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,12 +33,13 @@ rustflags = [ "-Ctarget-feature=+avx2" ]
 #opt-level = 1
 
 [profile.release]
-debug = false
-#panic = "abort"
-panic = "unwind"
 opt-level = 3
 overflow-checks = false
 #lto = "fat"
 #codegen-units = 1
+#debug = true
+#panic = "abort"
 lto = "thin"
 codegen-units = 16
+debug = false
+panic = "unwind"
