--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ raw-window-handle = "0.6.2"
 sdl3 = { version = "0.14.33", features = [ "ash", "raw-window-handle" ] }
 thiserror = "2.0.12"
 tobj = "4.0.3"
-vulkano = "0.35.1"
+vulkano = { version = "0.35.1" }
 #ash = "0.38.0"
 smallvec = "1.15.1"
 shaderc = "0.9.1"
