--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ shrev = "1.1.3"
 #hecs = "0.10.5"
 bevy_ecs = "0.16.1"
 rayon = "1.10.0"
+lazy_static = "1.5.0"
 #shipyard = "0.8.1"
 #tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "sync", "macros" ] }
 
