--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ foldhash = "=0.1.5"
 crossbeam = "0.8.4"
 shrev = "1.1.3"
 #hecs = "0.10.5"
-bevy_ecs = "0.16.1"
+bevy_ecs = { version = "0.16.1", features = ["track_location"] }
 rayon = "1.10.0"
 lazy_static = "1.5.0"
 num = "0.4.3"
