--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,8 @@ overflow-checks = false
 #panic = "abort"
 lto = "thin"
 codegen-units = 16
-debug = false
+debug = true
+strip = "none"
 panic = "unwind"
 
 
